analyses/tests/snapshots/gb_snapshots/hyperplonk_multiset_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
__zippel::node::173 - 1
g_shift_inv[0]*r + g_evs[0]*g_shift_inv[0] - 1
g_shift_inv[1]*r + g_evs[1]*g_shift_inv[1] - 1
g_shift_inv[2]*r + g_evs[2]*g_shift_inv[2] - 1
g_shift_inv[3]*r + g_evs[3]*g_shift_inv[3] - 1
g_shift_inv[4]*r + g_evs[4]*g_shift_inv[4] - 1
g_shift_inv[5]*r + g_evs[5]*g_shift_inv[5] - 1
g_shift_inv[6]*r + g_evs[6]*g_shift_inv[6] - 1
g_shift_inv[7]*r + g_evs[7]*g_shift_inv[7] - 1
v_evs[0]*v_evs[2]*v_evs[4]*v_evs[6]*v_evs[8]*v_evs[10]*v_evs[12]*v_evs[14] - 1
