analyses/tests/snapshots/gb_snapshots/hyperplonk_productcheck_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
- v_evs[0] + f_evs[0]
- v_evs[10] + f_evs[5]
- v_evs[12] + f_evs[6]
- v_evs[14] + f_evs[7]
- v_evs[2] + f_evs[1]
- v_evs[4] + f_evs[2]
- v_evs[6] + f_evs[3]
- v_evs[7] + claimed
- v_evs[8] + f_evs[4]
__zippel::gb::interp_inv::0 + 1
__zippel::gb::interp_inv::1 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::10 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::11 - 1
__zippel::gb::interp_inv::12 + 1
__zippel::gb::interp_inv::13 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::14 + 34957250116750793652965160338790643891793701667018425215069105799959054123009*1
__zippel::gb::interp_inv::15 - 1
__zippel::gb::interp_inv::16 + 1
__zippel::gb::interp_inv::17 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::18 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::19 - 1
__zippel::gb::interp_inv::2 + 34957250116750793652965160338790643891793701667018425215069105799959054123009*1
__zippel::gb::interp_inv::20 + 1
__zippel::gb::interp_inv::21 + 17478625058375396826482580169395321945896850833509212607534552899979527061504*1
__zippel::gb::interp_inv::22 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::23 - 1
__zippel::gb::interp_inv::24 + 1
__zippel::gb::interp_inv::25 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::26 + 34957250116750793652965160338790643891793701667018425215069105799959054123009*1
__zippel::gb::interp_inv::27 - 1
__zippel::gb::interp_inv::28 + 1
__zippel::gb::interp_inv::29 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::3 - 1
__zippel::gb::interp_inv::30 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::31 - 1
__zippel::gb::interp_inv::32 + 1
__zippel::gb::interp_inv::33 + 17478625058375396826482580169395321945896850833509212607534552899979527061504*1
__zippel::gb::interp_inv::34 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::35 - 1
__zippel::gb::interp_inv::4 + 1
__zippel::gb::interp_inv::5 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::6 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::7 - 1
__zippel::gb::interp_inv::8 + 1
__zippel::gb::interp_inv::9 + 17478625058375396826482580169395321945896850833509212607534552899979527061504*1
__zippel::node::100 - 1
__zippel::node::122 - 1
__zippel::node::161 - 1
__zippel::node::164 - 1
__zippel::node::172 - 1
__zippel::node::174 - 1
__zippel::node::178 - 1
__zippel::node::181 - 1
__zippel::node::74 - 1
v_evs[0]*v_evs[8] - v_evs[1]
v_evs[15]
v_evs[1]*v_evs[9] - v_evs[3]
v_evs[2]*v_evs[10] - v_evs[5]
v_evs[3]*v_evs[11] - v_evs[7]
v_evs[4]*v_evs[12] - v_evs[9]
v_evs[5]*v_evs[13] - v_evs[11]
v_evs[6]*v_evs[14] - v_evs[13]
