analyses/tests/snapshots/gb_snapshots/hyperplonk_zerocheck_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
- c_evs[0] + a_evs[0]*b_evs[0]
- c_evs[1] + a_evs[1]*b_evs[1]
- c_evs[2] + a_evs[2]*b_evs[2]
- c_evs[3] + a_evs[3]*b_evs[3]
- c_evs[4] + a_evs[4]*b_evs[4]
- c_evs[5] + a_evs[5]*b_evs[5]
- c_evs[6] + a_evs[6]*b_evs[6]
- c_evs[7] + a_evs[7]*b_evs[7]
__zippel::gb::interp_inv::0 + 1
__zippel::gb::interp_inv::1 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::10 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::11 - 1
__zippel::gb::interp_inv::12 + 1
__zippel::gb::interp_inv::13 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::14 + 34957250116750793652965160338790643891793701667018425215069105799959054123009*1
__zippel::gb::interp_inv::15 - 1
__zippel::gb::interp_inv::16 + 1
__zippel::gb::interp_inv::17 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::18 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::19 - 1
__zippel::gb::interp_inv::2 + 34957250116750793652965160338790643891793701667018425215069105799959054123009*1
__zippel::gb::interp_inv::20 + 1
__zippel::gb::interp_inv::21 + 17478625058375396826482580169395321945896850833509212607534552899979527061504*1
__zippel::gb::interp_inv::22 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::23 - 1
__zippel::gb::interp_inv::24 + 1
__zippel::gb::interp_inv::25 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::26 + 34957250116750793652965160338790643891793701667018425215069105799959054123009*1
__zippel::gb::interp_inv::27 - 1
__zippel::gb::interp_inv::28 + 1
__zippel::gb::interp_inv::29 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::3 - 1
__zippel::gb::interp_inv::30 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::31 - 1
__zippel::gb::interp_inv::32 + 1
__zippel::gb::interp_inv::33 + 17478625058375396826482580169395321945896850833509212607534552899979527061504*1
__zippel::gb::interp_inv::34 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::35 - 1
__zippel::gb::interp_inv::4 + 1
__zippel::gb::interp_inv::5 + 26217937587563095239723870254092982918845276250263818911301829349969290592257*1
__zippel::gb::interp_inv::6 + 26217937587563095239723870254092982918845276250263818911301829349969290592256*1
__zippel::gb::interp_inv::7 - 1
__zippel::gb::interp_inv::8 + 1
__zippel::gb::interp_inv::9 + 17478625058375396826482580169395321945896850833509212607534552899979527061504*1
__zippel::node::110 - 1
__zippel::node::140 - 1
__zippel::node::148 - 1
__zippel::node::62 - 1
__zippel::node::88 - 1
