analyses/tests/snapshots/gb_snapshots/hyrax_ipa_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
__zippel::node::99 - 1
c*c_inv - 1
