analyses/tests/snapshots/gb_snapshots/hyrax_podp_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
checks:
- h*z_beta - a_vec[0]*g*z_vec[0] + tau*c + beta
- h*z_delta - g_vec[0]*z_vec[0] + xi*c + delta
discharged before the basis: 2 of 2
basis:
