analyses/tests/snapshots/gb_snapshots/ipa_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
check: r_transcript*inverse^2 + l_transcript*x_challenge^2 + ip_val_claimed*u_aux_base*x_chal + p_initial_commitment == u_aux_base*x_chal*final_a_scalar*final_b_scalar + h_vec[1]*inverse*final_b_scalar + h_vec[0]*x_challenge*final_b_scalar + g_vec[0]*inverse*final_a_scalar + g_vec[1]*x_challenge*final_a_scalar
  l_transcript <- a_vec_witness[0]*b_vec_witness[1]*u_aux_base*x_chal + b_vec_witness[1]*h_vec[0] + a_vec_witness[0]*g_vec[1]
  r_transcript <- a_vec_witness[1]*b_vec_witness[0]*u_aux_base*x_chal + b_vec_witness[0]*h_vec[1] + a_vec_witness[1]*g_vec[0]
  final_a_scalar <- a_vec_witness[1]*inverse + a_vec_witness[0]*x_challenge
  final_b_scalar <- b_vec_witness[0]*inverse + b_vec_witness[1]*x_challenge
  ip_val_claimed == a_vec_witness[1]*b_vec_witness[1] + a_vec_witness[0]*b_vec_witness[0]
  p_initial_commitment == b_vec_witness[1]*h_vec[1] + b_vec_witness[0]*h_vec[0] + a_vec_witness[1]*g_vec[1] + a_vec_witness[0]*g_vec[0]
  lhs: a_vec_witness[1]*b_vec_witness[0]*u_aux_base*x_chal*inverse^2 + b_vec_witness[0]*h_vec[1]*inverse^2 + a_vec_witness[1]*g_vec[0]*inverse^2 + a_vec_witness[0]*b_vec_witness[1]*u_aux_base*x_chal*x_challenge^2 + b_vec_witness[1]*h_vec[0]*x_challenge^2 + a_vec_witness[0]*g_vec[1]*x_challenge^2 + a_vec_witness[1]*b_vec_witness[1]*u_aux_base*x_chal + a_vec_witness[0]*b_vec_witness[0]*u_aux_base*x_chal + b_vec_witness[1]*h_vec[1] + b_vec_witness[0]*h_vec[0] + a_vec_witness[1]*g_vec[1] + a_vec_witness[0]*g_vec[0]
  rhs: a_vec_witness[1]*b_vec_witness[0]*u_aux_base*x_chal*inverse^2 + b_vec_witness[0]*h_vec[1]*inverse^2 + a_vec_witness[1]*g_vec[0]*inverse^2 + a_vec_witness[1]*b_vec_witness[1]*u_aux_base*x_chal*x_challenge*inverse + a_vec_witness[0]*b_vec_witness[0]*u_aux_base*x_chal*x_challenge*inverse + b_vec_witness[1]*h_vec[1]*x_challenge*inverse + b_vec_witness[0]*h_vec[0]*x_challenge*inverse + a_vec_witness[1]*g_vec[1]*x_challenge*inverse + a_vec_witness[0]*g_vec[0]*x_challenge*inverse + a_vec_witness[0]*b_vec_witness[1]*u_aux_base*x_chal*x_challenge^2 + b_vec_witness[1]*h_vec[0]*x_challenge^2 + a_vec_witness[0]*g_vec[1]*x_challenge^2
  equal modulo the basis, using:
    - __zippel::gb::div_inv::0 + inverse
    x_challenge*__zippel::gb::div_inv::0 - 1
basis:
- __zippel::gb::div_inv::0 + __zippel::gb::div_inv::1
- __zippel::gb::div_inv::0 + inverse
__zippel::node::67 - 1
x_challenge*__zippel::gb::div_inv::0 - 1
