analyses/tests/snapshots/gb_snapshots/kzg_completeness_basis.snap
---
source: analyses/tests/gb_snapshots/common.rs
expression: value
---
check: srs_g2_s*proof - eval_point*gen_g2*proof == gen_g2*commitment - eval_result*gen_g1*gen_g2
  commitment <- poly_x[1]*srs_g1[1] + poly_x[0]*srs_g1[0]
  proof <- srs_g1[0]*__zippel::gb::div_q::0[0]
  eval_result == eval_point*__zippel::gb::div_q::0[0] + poly_x[0]
  poly_x[1] == __zippel::gb::div_q::0[0]
  srs_g2_s == gen_g2*tau
  lhs: gen_g2*srs_g1[0]*tau*__zippel::gb::div_q::0[0] - eval_point*gen_g2*srs_g1[0]*__zippel::gb::div_q::0[0]
  rhs: gen_g2*srs_g1[1]*__zippel::gb::div_q::0[0] - eval_point*gen_g1*gen_g2*__zippel::gb::div_q::0[0] + gen_g2*poly_x[0]*srs_g1[0] - gen_g1*gen_g2*poly_x[0]
  equal modulo the basis, using:
    - srs_g1[0] + gen_g1
    srs_g1[0]*tau - srs_g1[1]
basis:
- srs_g1[0] + gen_g1
__zippel::node::27 - 1
__zippel::node::40[0] - 1
__zippel::node::40[1] - 1
srs_g1[0]*tau - srs_g1[1]
